<resources>
    <string name="app_name">MeteoAuthentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cards">cards</string>
    <string name="profile">profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="explore">explore</string>
    <string name="stations">stations</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="update_user">UPDATE USER</string>
    <string name="generate_token">GENERATE TOKEN</string>
    <string name="registrationtimetextview">registrationTimeTextView</string>
    <string name="modeldescriptiontextview">modelDescriptionTextView</string>
    <string name="destinationtextview">destinationTextView</string>
    <string name="titletextview">titleTextView</string>
    <string name="cancel">Cancel</string>
    <string name="copy_to_clipboard">Copy To Clipboard</string>
    <string name="upgrade_info">UPGRADE INFO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="measured_values">measured values</string>
    <string name="title">Title</string>
    <string name="destination">Destination</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="add_a_new_station">Add a new station!</string>
    <string name="ownweather">OWNWEATHER</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="log_in">LOG IN</string>
    <string name="already_registered_login_here">Already registered? Login here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="delete_station">DELETE STATION</string>
    <string name="bearer_token">Bearer token</string>
    <string name="test_station_name">test station name</string>
</resources>